tests/errors/syntax_err11.v
module a;
parameter integer real x=0;
endmodule
